--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@
 body{
 	margin: 0;
 	font-family: 'Montserrat', sans-serif;
+	background-color: #fff;
+  	color: #333;
 }
 
 header{
@@ -228,9 +230,9 @@ nav li a{
 	font-weight: 400;
 }
 
-#section3{
+/* #section3{
 	background-color: #F8F8F8;
-}
+} */
 
 #section3 .container{
 	display: flex;
@@ -259,10 +261,10 @@ nav li a{
 
 .offer{
 	width: 48%;
-	background-color: white;
+	/* background-color: white; */
 	padding: 30px;
 	border-radius: 10px;
-	box-shadow: 0px 0px 8px rgba(0,0,0,0.2);
+	box-shadow: 0px 0px 32px rgba(0,0,0,0.2);
 	position: relative;
 	transition: all 0.5s;
 	top: 0;
@@ -272,7 +274,7 @@ nav li a{
 
 .offer:hover{
 	top: -10px;
-	box-shadow: 0px 0px 16px rgba(0,0,0,0.2);
+	box-shadow: 0px 0px 48px rgba(0,0,0,0.2);
 }
 
 .offer h1{
@@ -322,8 +324,17 @@ body > footer ul{
 	display: flex;
 	align-items: center;
 }
-
-
+.dark-mode{
+	background-color: #333;
+	color: #fff;
+}
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
 @media screen and (max-width: 1000px){
 
 	.container{
@@ -383,9 +394,9 @@ body > footer ul{
 		z-index: 10;
 	}
 
-	header{
-/*		display: none;*/
-	}
+	/* header{
+		display: none;
+	} */
 }
 
 
